Update to add flash on follow as well as a police flash (red/blue)